# mlb-parser

./: .gitignore  Cargo.toml  FORMAT.md  generate.py  pyproject.toml
src/: lib.rs  parser.rs
src/parser/: game.rs
test_data/: 747060.txt  747063.txt  747801.txt  747811.txt  747822.txt  747836.txt  747850.txt  747881.txt  747883.txt  747896.txt  747907.txt  747920.txt  747940.txt  747969.txt  747983.txt  748006.txt  748022.txt  748045.txt  748058.txt  748073.txt  748084.txt  748090.txt  748100.txt  748111.txt  748120.txt  748142.txt  748158.txt  748173.txt  748190.txt  748197.txt  748220.txt  748231.txt  748236.txt  766493.txt
