[package]
name = "mlb-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mlb_parser"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.20.3"
pyo3 = "0.23.3"
regex = "1.11.1"
strum = "0.27.1"
strum_macros = "0.27.1"
