[package]
name = "mlb-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mlb_parser"
crate-type = ["cdylib"]

[dependencies]
fancy-regex = "0.14.0"
once_cell = "1.20.3"
pyo3 = "0.23.3"
rand = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"
